--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Carrinho de compras</title>
 </head>
-<body>
+<body  name="body">
     <script src="index.js"></script>
 </body>
 </html>
